# file-indexer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  index.rs  main.rs  scanner.rs
