[package]
name = "file-indexer"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "6.0"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winresource = "0.1"
